[metadata]
name = pydho800
version = 0.0.8
author = Jubei
author_email = jubei@puffkrush.org
description = Rigol 800 control library (unofficial)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MasterJubei/pydho800
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pylabdevs-tspspi >= 0.0.11

[options.packages.find]
where = src
